src/test/deca/syntax/invalid/declField-noType.synt
declField-noType.deca:2:
